-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 8.0.2
-
None
-
-
8dd939bb27 (qt-creator/qt-creator/9.0) 8dd939bb27 (qt-creator/qt-creator/master), 87e5ac743 (master)
The "Version Control" pane in Qt Creator on Linux once again leaks passwords in plain text - this has been reported before (QTCREATORBUG-24153) but reading through the comments there they all mention Windows though the report clearly specifies Linux.
- relates to
-
QTCREATORBUG-24153 Reg: Output of "Tools > Subversion > Status of project…" prints password in clear text
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-28413 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 442861,2 | Vcs: Do not expose passwords to the output windows | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 454322,5 | Subversion: Mask credentials in command line everywhere | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |