Subversion: Mask credentials in command line everywhere

Fixes: QTCREATORBUG-28413
Change-Id: I763c26944d89a8dcc7151e10b8eed5d9642fb982
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>