src/plugins/subversion/subversionplugin.cpp
@@ -214,7 +214,7 @@ public:
 
     QString monitorFile(const FilePath &repository) const;
     QString synchronousTopic(const FilePath &repository) const;
-    CommandResult runSvn(const FilePath &workingDir, const QStringList &arguments,
+    CommandResult runSvn(const FilePath &workingDir, const CommandLine &command,
                          RunFlags flags = RunFlags::None, QTextCodec *outputCodec = nullptr,
                          int timeoutMutiplier = 1) const;
     void vcsAnnotateHelper(const FilePath &workingDir, const QString &file,
@@ -643,9 +643,8 @@ void SubversionPluginPrivate::revertAll()
                              QMessageBox::Yes, QMessageBox::No) == QMessageBox::No)
         return;
     // NoteL: Svn "revert ." doesn not work.
-    QStringList args;
-    args << QLatin1String("revert");
-    args << SubversionClient::addAuthenticationOptions(m_settings);
+    CommandLine args{m_settings.binaryPath.filePath(), {"revert"}};
+    args << SubversionClient::AddAuthOptions();
     args << QLatin1String("--recursive") << state.topLevel().toString();
     const auto revertResponse = runSvn(state.topLevel(), args, RunFlags::ShowStdOut);
     if (revertResponse.result() != ProcessResult::FinishedWithSuccess) {
@@ -661,11 +660,11 @@ void SubversionPluginPrivate::revertCurrentFile()
     const VcsBasePluginState state = currentState();
     QTC_ASSERT(state.hasFile(), return);
 
-    QStringList args(QLatin1String("diff"));
-    args << SubversionClient::addAuthenticationOptions(m_settings);
-    args.push_back(SubversionClient::escapeFile(state.relativeCurrentFile()));
+    CommandLine diffArgs{m_settings.binaryPath.filePath(), {"diff"}};
+    diffArgs << SubversionClient::AddAuthOptions();
+    diffArgs << SubversionClient::escapeFile(state.relativeCurrentFile());
 
-    const auto diffResponse = runSvn(state.currentFileTopLevel(), args);
+    const auto diffResponse = runSvn(state.currentFileTopLevel(), diffArgs);
     if (diffResponse.result() != ProcessResult::FinishedWithSuccess)
         return;
     if (diffResponse.cleanedStdOut().isEmpty())
@@ -679,9 +678,8 @@ void SubversionPluginPrivate::revertCurrentFile()
     FileChangeBlocker fcb(FilePath::fromString(state.currentFile()));
 
     // revert
-    args.clear();
-    args << QLatin1String("revert");
-    args << SubversionClient::addAuthenticationOptions(m_settings);
+    CommandLine args{m_settings.binaryPath.filePath(), {"revert"}};
+    args << SubversionClient::AddAuthOptions();
     args << SubversionClient::escapeFile(state.relativeCurrentFile());
 
     const auto revertResponse = runSvn(state.currentFileTopLevel(), args, RunFlags::ShowStdOut);
@@ -741,9 +739,9 @@ void SubversionPluginPrivate::startCommit(const FilePath &workingDir, const QStr
         return;
     }
 
-    QStringList args(QLatin1String("status"));
-    args << SubversionClient::addAuthenticationOptions(m_settings);
-    args += SubversionClient::escapeFiles(files);
+    CommandLine args{m_settings.binaryPath.filePath(), {"status"}};
+    args << SubversionClient::AddAuthOptions();
+    args << SubversionClient::escapeFiles(files);
 
     const auto response = runSvn(workingDir, args);
     if (response.result() != ProcessResult::FinishedWithSuccess)
@@ -820,10 +818,10 @@ void SubversionPluginPrivate::svnStatus(const FilePath &workingDir, const QStrin
 {
     const VcsBasePluginState state = currentState();
     QTC_ASSERT(state.hasTopLevel(), return);
-    QStringList args(QLatin1String("status"));
-    args << SubversionClient::addAuthenticationOptions(m_settings);
+    CommandLine args{m_settings.binaryPath.filePath(), {"status"}};
+    args << SubversionClient::AddAuthOptions();
     if (!relativePath.isEmpty())
-        args.append(SubversionClient::escapeFile(relativePath));
+        args << SubversionClient::escapeFile(relativePath);
     VcsOutputWindow::setRepository(workingDir);
     runSvn(workingDir, args, RunFlags::ShowStdOut | RunFlags::ShowSuccessMessage);
     VcsOutputWindow::clearRepository();
@@ -833,7 +831,8 @@ void SubversionPluginPrivate::filelog(const FilePath &workingDir,
                                       const QString &file,
                                       bool enableAnnotationContextMenu)
 {
-    m_client->log(workingDir, QStringList(file), QStringList(), enableAnnotationContextMenu);
+    m_client->log(workingDir, QStringList(file), QStringList(), enableAnnotationContextMenu,
+                  [](CommandLine &command) { command << SubversionClient::AddAuthOptions(); });
 }
 
 void SubversionPluginPrivate::updateProject()
@@ -845,11 +844,11 @@ void SubversionPluginPrivate::updateProject()
 
 void SubversionPluginPrivate::svnUpdate(const FilePath &workingDir, const QString &relativePath)
 {
-    QStringList args(QLatin1String("update"));
-    args << SubversionClient::addAuthenticationOptions(m_settings);
-    args.push_back(QLatin1String(Constants::NON_INTERACTIVE_OPTION));
+    CommandLine args{m_settings.binaryPath.filePath(), {"update"}};
+    args << SubversionClient::AddAuthOptions();
+    args << Constants::NON_INTERACTIVE_OPTION;
     if (!relativePath.isEmpty())
-        args.append(relativePath);
+        args << relativePath;
     const auto response = runSvn(workingDir, args, RunFlags::ShowStdOut, nullptr, 10);
     if (response.result() == ProcessResult::FinishedWithSuccess)
         emit repositoryChanged(workingDir);
@@ -869,14 +868,13 @@ void SubversionPluginPrivate::vcsAnnotateHelper(const FilePath &workingDir, cons
     const QString source = VcsBaseEditor::getSource(workingDir, file);
     QTextCodec *codec = VcsBaseEditor::getCodec(source);
 
-    QStringList args(QLatin1String("annotate"));
-    args << SubversionClient::addAuthenticationOptions(m_settings);
+    CommandLine args{m_settings.binaryPath.filePath(), {"annotate"}};
+    args << SubversionClient::AddAuthOptions();
     if (m_settings.spaceIgnorantAnnotation.value())
-        args << QLatin1String("-x") << QLatin1String("-uw");
+        args << "-x" << "-uw";
     if (!revision.isEmpty())
-        args << QLatin1String("-r") << revision;
-    args.push_back(QLatin1String("-v"));
-    args.append(QDir::toNativeSeparators(SubversionClient::escapeFile(file)));
+        args << "-r" << revision;
+    args << "-v" << QDir::toNativeSeparators(SubversionClient::escapeFile(file));
 
     const auto response = runSvn(workingDir, args, RunFlags::ForceCLocale, codec);
     if (response.result() != ProcessResult::FinishedWithSuccess)
@@ -951,14 +949,14 @@ void SubversionPluginPrivate::slotDescribe()
 }
 
 CommandResult SubversionPluginPrivate::runSvn(const FilePath &workingDir,
-                                              const QStringList &arguments, RunFlags flags,
+                                              const CommandLine &command, RunFlags flags,
                                               QTextCodec *outputCodec, int timeoutMutiplier) const
 {
     if (m_settings.binaryPath.value().isEmpty())
         return CommandResult(ProcessResult::StartFailed, tr("No subversion executable specified."));
 
     const int timeoutS = m_settings.timeout.value() * timeoutMutiplier;
-    return m_client->vcsSynchronousExec(workingDir, arguments, flags, timeoutS, outputCodec);
+    return m_client->vcsSynchronousExec(workingDir, command, flags, timeoutS, outputCodec);
 }
 
 IEditor *SubversionPluginPrivate::showOutputInEditor(const QString &title, const QString &output,
@@ -1013,10 +1011,8 @@ QString SubversionPluginPrivate::synchronousTopic(const FilePath &repository) co
 bool SubversionPluginPrivate::vcsAdd(const FilePath &workingDir, const QString &rawFileName)
 {
     const QString file = QDir::toNativeSeparators(SubversionClient::escapeFile(rawFileName));
-    QStringList args;
-    args << QLatin1String("add")
-         << SubversionClient::addAuthenticationOptions(m_settings)
-         << QLatin1String("--parents") << file;
+    CommandLine args{m_settings.binaryPath.filePath()};
+    args << "add" << SubversionClient::AddAuthOptions() << "--parents" << file;
     return runSvn(workingDir, args, RunFlags::ShowStdOut).result()
             == ProcessResult::FinishedWithSuccess;
 }
@@ -1025,10 +1021,8 @@ bool SubversionPluginPrivate::vcsDelete(const FilePath &workingDir, const QStrin
 {
     const QString file = QDir::toNativeSeparators(SubversionClient::escapeFile(rawFileName));
 
-    QStringList args;
-    args << QLatin1String("delete");
-    args << SubversionClient::addAuthenticationOptions(m_settings)
-         << QLatin1String("--force") << file;
+    CommandLine args{m_settings.binaryPath.filePath()};
+    args << "delete" << SubversionClient::AddAuthOptions() << "--force" << file;
 
     return runSvn(workingDir, args, RunFlags::ShowStdOut).result()
             == ProcessResult::FinishedWithSuccess;
@@ -1036,9 +1030,9 @@ bool SubversionPluginPrivate::vcsDelete(const FilePath &workingDir, const QStrin
 
 bool SubversionPluginPrivate::vcsMove(const FilePath &workingDir, const QString &from, const QString &to)
 {
-    QStringList args(QLatin1String("move"));
-    args << SubversionClient::addAuthenticationOptions(m_settings);
-    args << QDir::toNativeSeparators(SubversionClient::escapeFile(from))
+    CommandLine args{m_settings.binaryPath.filePath(), {"move"}};
+    args << SubversionClient::AddAuthOptions()
+         << QDir::toNativeSeparators(SubversionClient::escapeFile(from))
          << QDir::toNativeSeparators(SubversionClient::escapeFile(to));
     return runSvn(workingDir, args, RunFlags::ShowStdOut).result()
             == ProcessResult::FinishedWithSuccess;
@@ -1049,8 +1043,8 @@ bool SubversionPluginPrivate::vcsCheckout(const FilePath &directory, const QByte
     QUrl tempUrl = QUrl::fromEncoded(url);
     const QString username = tempUrl.userName();
     const QString password = tempUrl.password();
-    QStringList args = QStringList(QLatin1String("checkout"));
-    args << QLatin1String(Constants::NON_INTERACTIVE_OPTION) ;
+    CommandLine args{m_settings.binaryPath.filePath(), {"checkout"}};
+    args << Constants::NON_INTERACTIVE_OPTION;
 
     if (!username.isEmpty()) {
         // If url contains username and password we have to use separate username and password
@@ -1059,12 +1053,13 @@ bool SubversionPluginPrivate::vcsCheckout(const FilePath &directory, const QByte
         // if for example we are logging into a new host for the first time using svn. There seems to
         // be a bug in subversion, so this might get fixed in the future.
         tempUrl.setUserInfo({});
-        args << QLatin1String("--username") << username;
+        args << "--username" << username;
         if (!password.isEmpty())
-            args << QLatin1String("--password") << password;
+            args << "--password";
+        args.addMaskedArg(password);
     }
 
-    args << QLatin1String(tempUrl.toEncoded()) << directory.toString();
+    args << QString::fromLatin1(tempUrl.toEncoded()) << directory.toString();
 
     return runSvn(directory, args, RunFlags::None, nullptr, 10).result()
             == ProcessResult::FinishedWithSuccess;
@@ -1095,9 +1090,8 @@ bool SubversionPluginPrivate::managesDirectory(const FilePath &directory, FilePa
 
 bool SubversionPluginPrivate::managesFile(const FilePath &workingDirectory, const QString &fileName) const
 {
-    QStringList args;
-    args << QLatin1String("status");
-    args << SubversionClient::addAuthenticationOptions(m_settings)
+    CommandLine args{m_settings.binaryPath.filePath()};
+    args << "status" << SubversionClient::AddAuthOptions()
          << QDir::toNativeSeparators(SubversionClient::escapeFile(fileName));
     const QString output = runSvn(workingDirectory, args).cleanedStdOut();
     return output.isEmpty() || output.front() != QLatin1Char('?');
@@ -1198,14 +1192,13 @@ VcsCommand *SubversionPluginPrivate::createInitialCheckoutCommand(const QString 
                                                                   const QString &localName,
                                                                   const QStringList &extraArgs)
 {
-    QStringList args;
-    args << QLatin1String("checkout");
-    args << SubversionClient::addAuthenticationOptions(m_settings);
-    args << QLatin1String(Subversion::Constants::NON_INTERACTIVE_OPTION);
-    args << extraArgs << url << localName;
+    CommandLine args{m_settings.binaryPath.filePath()};
+    args << "checkout";
+    args << SubversionClient::AddAuthOptions();
+    args << Subversion::Constants::NON_INTERACTIVE_OPTION << extraArgs << url << localName;
 
     auto command = VcsBaseClient::createVcsCommand(baseDirectory, m_client->processEnvironment());
-    command->addJob({m_settings.binaryPath.filePath(), args}, -1);
+    command->addJob(args, -1);
     return command;
 }
 
